erDiagram
    komponen_biayas {
        bigint id PK "id"
        varchar kode UK "kode"
        varchar nama "nama"
        varchar kategori "kategori"
        bigint program_studi_id FK "program_studi_id"
        int angkatan "angkatan"
        decimal nominal "nominal"
        tinyint is_active "is_active"
        text keterangan "keterangan"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    kelompok_ukts {
        bigint id PK "id"
        bigint program_studi_id FK "program_studi_id"
        varchar nama "nama"
        decimal nominal_per_semester "nominal_per_semester"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    mahasiswa_ukts {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint kelompok_ukt_id FK "kelompok_ukt_id"
        bigint tahun_ajaran_id FK "tahun_ajaran_id"
        varchar status "status"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    beasiswa_mahasiswas {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint jenis_beasiswa_id FK "jenis_beasiswa_id"
        varchar status "status"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    tagihans {
        bigint id PK "id"
        bigint mahasiswa_id FK "mahasiswa_id"
        bigint tahun_ajaran_id FK "tahun_ajaran_id"
        varchar jenis "jenis"
        decimal nominal "nominal"
        date jatuh_tempo "jatuh_tempo"
        varchar status "status"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
        timestamp deleted_at "deleted_at"
    }
    cicilan_tagihans {
        bigint id PK "id"
        bigint tagihan_id FK "tagihan_id"
        int cicilan_ke "cicilan_ke"
        decimal nominal "nominal"
        date jatuh_tempo "jatuh_tempo"
        varchar status "status"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
    }
    pembayarans {
        bigint id PK "id"
        bigint tagihan_id FK "tagihan_id"
        date tanggal_bayar "tanggal_bayar"
        decimal nominal_dibayar "nominal_dibayar"
        varchar metode "metode"
        varchar bukti_file_path "bukti_file_path"
        varchar status_verifikasi "status_verifikasi"
        bigint diverifikasi_oleh_user_id FK "diverifikasi_oleh_user_id"
        timestamp diverifikasi_at "diverifikasi_at"
        timestamp created_at "created_at"
        timestamp updated_at "updated_at"
        timestamp deleted_at "deleted_at"
    }
    kelompok_ukts ||--o{ mahasiswa_ukts : "kelompok_ukt_id"
    tagihans ||--o{ cicilan_tagihans : "tagihan_id"
    tagihans ||--o{ pembayarans : "tagihan_id"